--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <link rel="stylesheet" href="./resources/styles.css"/>
   </head>
  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-95T0F0TGLQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-95T0F0TGLQ');
+</script>
+
     <body>
         
         
